# dnd-health-tracker

./: .gitignore  Makefile  README.md  go.mod  go.sum  justfile
cmd/healthbar/: main.go  strip_hw.go  strip_nohw.go
deploy/: build-arm.sh  healthbar.service  provision.sh
deploy/config/: device.toml
docs/: cold-boot-hang-investigation.md
docs/plans/: 2026-06-24-dnd-led-health-bar-design.md  2026-06-24-pico2w-healthbar-design.md
firmware/: README.md  anim.py  auth.py  boot.py  colors.py  config.py  ddb.py  demo.py  hp.py  leds.py  main.py  portal.py  push.sh  wifi.py  ws.py
firmware-c/: .gitignore  CMakeLists.txt  README.md  lwipopts.h
firmware-c/ota/: MIGRATION.md  SPIKE_NOTES.md  partition_table.json
firmware-c/src/: boot_mode.h  config.c  config.h  config_choose.c  configform.c  configform.h  health.h  http_poll.c  http_poll.h  leds.c  leds.h  m0_blink.c  m5_ledtest.c  m6_tbyb.c  ota.c  ota.h  ota_flash.c  ota_flash.h  ota_manifest.c  ota_manifest.h  ota_sink.c  ota_sink.h  portal.c  provision.c  provision.h  sha256.c  sha256.h  statusd.c  statusd.h
firmware-c/test/: run.sh  test_assert.h  test_config_choose.c  test_ota_manifest.c  test_ota_sink.c  test_sha256.c
firmware/data/: config.json  theme.json
firmware/tests/: fixture_character.json  test_anim.py  test_auth.py  test_ddb.py  test_hp.py  test_main.py  test_portal.py  test_wifi.py  test_ws.py
internal/anim/: bar.go  bar_test.go  engine.go
internal/app/: app.go  config_ops.go
internal/config/: config.go  config_test.go  hexcolor.go  save.go  secrets.go  secrets_test.go  wifi.go
internal/ddb/: auth.go  auth_test.go  client.go  hp.go  hp_test.go  poller.go  poller_test.go  ws.go
internal/led/: hw.go  led_test.go
internal/netcfg/: manager_test.go  runner.go  watch.go
internal/web/: server.go  server_test.go  templates.go
internal/web/templates/: credentials.html  device.html  theme.html  wifi.html
legacy-go/cmd/healthbar/: main.go
legacy-go/deploy/: README.md
legacy-go/deploy/config/: device.toml  theme.toml  wifi.toml
legacy-go/internal/anim/: effects.go  effects_test.go  engine_test.go
legacy-go/internal/ddb/: client_test.go  types.go  ws_test.go
legacy-go/internal/led/: led.go  sim.go
legacy-go/internal/netcfg/: manager.go
legacy-go/internal/web/templates/: base.html  status.html
server/: .dockerignore  .gitignore  Dockerfile  README.md  WIRE_FORMAT.md  docker-compose.yml  package-lock.json  package.json  sample-shen.txt  tsconfig.json
server/firmware/: manifest.txt
server/src/: auth.ts  db.ts  ddb.ts  firmware.ts  hp.ts  index.ts  manager.ts  ws.ts
server/src/routes/: admin.ts  dnd.ts  firmware.ts
server/test/: auth.test.ts  ddb.test.ts  dnd.test.ts  firmware.test.ts  hp.test.ts
server/tools/: publish-fw.mjs
testdata/: character_override.json  character_public.json
tools/: provision.mjs
